--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="yellow">#FFEB3B</color>
     <color name="blue">#03A9F4</color>
     <color name="black">#000000</color>
+    <color name="grey">#bbb2b2</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
